--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,24 @@
-body {
-    background: white;
-}
+@import "./base/modern-normalize";
+@import "./utils/variables";
+@import "./base/base";
+@import "./base/container";
+@import "./components/header";
+// @import "./components/hero";
+// @import "./components/section";
+// @import "./components/section-about";
+// @import "./components/section-team";
+// @import "./components/portfolio";
+// @import "./components/modal";
+// @import "./components/modal-form";
+@import "./components/features";
+@import "./components/commands";
+@import "./components/clients";
+@import "./components/footer";
+@import "./components/work";
+@import "./components/block-one";
+@import "./components/block-one-button";
+@import "./components/modal";
+@import "./components/portfolio";
+@import "./components/portfolio-nav-buttons";
+@import "./components/portfolio-projects";
+
