--- a/sass/components/_block-one.scss
+++ b/sass/components/_block-one.scss
@@ -24,6 +24,6 @@
     line-height: 60px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: var(--text-color-white);
+    color: $text-color-white;
     margin: 0;
 }
