--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -16,10 +16,9 @@
 }
 
 .backdrop.is-hidden .modal{
-    /* transform: translate(100%, 100%); */
-    /* transition:  250ms cubic-bezier(0.4, 0, 0.2, 1); */
     opacity: 0;
 }
+
     
 .modal{
     position: fixed;
@@ -28,7 +27,7 @@
     transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
-    background-color: var(--text-color-white);
+    background-color: $text-color-white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     animation-name: anim;
@@ -56,7 +55,7 @@
     line-height: 23px;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #212121;
+    color: $text-color-black;
     padding-top: 2px;
     padding-bottom: 12px;
 }
@@ -66,10 +65,6 @@
     padding-left: 40px;
     padding-right: 40px;
 }
-
-/* .modal-input li{
-    cursor: pointer;
-} */
 
 .modal-input li:not(:last-child){
     padding-bottom: 10px;
@@ -82,7 +77,7 @@
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
-    color: var(--text-color-grey);
+    color: $text-color-grey;
     text-align: left;
     padding-bottom: 4px;
 }
@@ -101,7 +96,7 @@
     height: 40px;
     padding-left: 42px;
     outline: none;
-    color: var(--black-color);
+    color: $black-color;
     cursor: pointer;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -126,13 +121,13 @@
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.01em;
-    color: var(--black-color);
+    color: $black-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment:hover,
 .comment:focus{
-    border: 1px solid var(--accent-color);
+    border: 1px solid $accent-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
     
@@ -149,8 +144,8 @@ textarea[name="comment"]::-moz-placeholder {
 .input-text:hover,
 .input-text:focus{
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    fill: $accent-color;
+    border: 1px solid $accent-color;
     box-sizing: border-box;
     border-radius: 4px;
     cursor: pointer;
@@ -158,7 +153,7 @@ textarea[name="comment"]::-moz-placeholder {
 
 .input-text:hover + .modal-input-svg,
 .input-text:focus + .modal-input-svg{
-    fill: var(--accent-color);
+    fill: $accent-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -167,12 +162,12 @@ textarea[name="comment"]::-moz-placeholder {
     height: 18px;
     position: absolute;
     left: 12px;
-    fill: var(--text-color-black);
+    fill: $text-color-black;
 }
 
 .input-comments:hover,
 .input-comments:focus{
-    border: 1px solid var(--accent-color);
+    border: 1px solid $accent-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -198,18 +193,18 @@ textarea[name="comment"]::-moz-placeholder {
 .input-checkbox svg{
     display: inline-block;
     transition-duration: 250ms;
-    transition-timing-function: var(--animating-timing);
+    transition-timing-function: $animating-timing;
 }
   
 .input-checkbox:checked + svg{
     background-image: url("../images/icons/icon-check.svg");
-    background-color: var(--accent-color);
+    background-color: $accent-color;
     background-size: contain;
     background-origin: border-box;
     fill: transparent;
     border-radius: 2px;
     transition-duration: 250ms;
-    transition-timing-function: var(--animating-timing);
+    transition-timing-function: $animating-timing;
 }
   
 .checkbox-text{
@@ -219,7 +214,7 @@ textarea[name="comment"]::-moz-placeholder {
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
-    color: var(--text-color-grey);
+    color: $text-color-grey;
     padding-left: 8.38px;
 }
   
@@ -232,7 +227,7 @@ textarea[name="comment"]::-moz-placeholder {
     line-height: 24px;
     letter-spacing: 0.03em;
     text-decoration-line: underline;
-    color: var(--accent-color);
+    color: $accent-color;
 }
 
 /* Кнопка отправки */
@@ -243,7 +238,7 @@ textarea[name="comment"]::-moz-placeholder {
 }
 
 .send-button{
-    background: var(--accent-color);
+    background: $accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: 0;
@@ -258,7 +253,7 @@ textarea[name="comment"]::-moz-placeholder {
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: var(--text-color-white);
+    color: $text-color-white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -276,10 +271,10 @@ textarea[name="comment"]::-moz-placeholder {
 .button-close{
     width: 30px;
     height: 30px;
-    background-color: var(--text-color-white);
+    background-color: $text-color-white;
     border-radius: 100%;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    color: var(--black-color);
+    color: $black-color;
     margin-top: 8px;
     margin-right: 8px;
     display: flex;
@@ -289,9 +284,6 @@ textarea[name="comment"]::-moz-placeholder {
     left: 490px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
-    /* animation-name: anim;
-    animation-direction: reverse;
-    animation-duration: 250ms; */
 }
 
 @keyframes back-anim{
@@ -313,6 +305,6 @@ textarea[name="comment"]::-moz-placeholder {
 
 .button-close:hover{
     border: 1px solid rgba(0, 0, 0, 0.1);
-    color: var(--accent-color);
+    color: $accent-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
