--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -10,7 +10,7 @@
 .projects li{
     height: 404px;
     width: 370px;
-    background: var(--text-color-white);
+    background: $text-color-white;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -45,9 +45,6 @@
     background: rgba(33, 150, 243, 0.9);
     transform: translatey(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
-    /* animation-duration: transform 250ms; */
-    /* transition: transform 250ms ease; */
 }
 
 .overlay p{
