--- a/css/main.css
+++ b/css/main.css
@@ -1084,14 +1084,14 @@ input[type="email"]::-moz-placeholder {
   line-height: 60px;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--text-color-white);
+  color: #FFFFFF;
   margin: 0;
 }
 
 .button {
   width: 200px;
   height: 50px;
-  background: var(--bt-second);
+  background: #2196F3;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -1111,7 +1111,7 @@ input[type="email"]::-moz-placeholder {
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
-  color: var(--text-color-white);
+  color: #FFFFFF;
   border: 0;
   outline: none;
 }
@@ -1134,8 +1134,6 @@ input[type="email"]::-moz-placeholder {
 }
 
 .backdrop.is-hidden .modal {
-  /* transform: translate(100%, 100%); */
-  /* transition:  250ms cubic-bezier(0.4, 0, 0.2, 1); */
   opacity: 0;
 }
 
@@ -1147,7 +1145,7 @@ input[type="email"]::-moz-placeholder {
           transform: translate(-50%, -50%);
   width: 528px;
   height: 581px;
-  background-color: var(--text-color-white);
+  background-color: #FFFFFF;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1202,9 +1200,6 @@ input[type="email"]::-moz-placeholder {
   padding-right: 40px;
 }
 
-/* .modal-input li{
-    cursor: pointer;
-} */
 .modal-input li:not(:last-child) {
   padding-bottom: 10px;
 }
@@ -1216,7 +1211,7 @@ input[type="email"]::-moz-placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: var(--text-color-grey);
+  color: #757575;
   text-align: left;
   padding-bottom: 4px;
 }
@@ -1240,7 +1235,7 @@ input[type="email"]::-moz-placeholder {
   height: 40px;
   padding-left: 42px;
   outline: none;
-  color: var(--black-color);
+  color: #000000;
   cursor: pointer;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1267,14 +1262,14 @@ input[type="email"]::-moz-placeholder {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.01em;
-  color: var(--black-color);
+  color: #000000;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment:hover,
 .comment:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196F3;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
@@ -1292,8 +1287,8 @@ textarea[name="comment"]::-moz-placeholder {
 .input-text:focus {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  fill: #2196F3;
+  border: 1px solid #2196F3;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 4px;
@@ -1302,7 +1297,7 @@ textarea[name="comment"]::-moz-placeholder {
 
 .input-text:hover + .modal-input-svg,
 .input-text:focus + .modal-input-svg {
-  fill: var(--accent-color);
+  fill: #2196F3;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1312,12 +1307,12 @@ textarea[name="comment"]::-moz-placeholder {
   height: 18px;
   position: absolute;
   left: 12px;
-  fill: var(--text-color-black);
+  fill: #212121;
 }
 
 .input-comments:hover,
 .input-comments:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196F3;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1357,21 +1352,21 @@ textarea[name="comment"]::-moz-placeholder {
   display: inline-block;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
-  -webkit-transition-timing-function: var(--animating-timing);
-          transition-timing-function: var(--animating-timing);
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-checkbox:checked + svg {
   background-image: url("../images/icons/icon-check.svg");
-  background-color: var(--accent-color);
+  background-color: #2196F3;
   background-size: contain;
   background-origin: border-box;
   fill: transparent;
   border-radius: 2px;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
-  -webkit-transition-timing-function: var(--animating-timing);
-          transition-timing-function: var(--animating-timing);
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-text {
@@ -1381,7 +1376,7 @@ textarea[name="comment"]::-moz-placeholder {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-  color: var(--text-color-grey);
+  color: #757575;
   padding-left: 8.38px;
 }
 
@@ -1395,7 +1390,7 @@ textarea[name="comment"]::-moz-placeholder {
   letter-spacing: 0.03em;
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
-  color: var(--accent-color);
+  color: #2196F3;
 }
 
 /* Кнопка отправки */
@@ -1410,7 +1405,7 @@ textarea[name="comment"]::-moz-placeholder {
 }
 
 .send-button {
-  background: var(--accent-color);
+  background: #2196F3;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -1430,7 +1425,7 @@ textarea[name="comment"]::-moz-placeholder {
           align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--text-color-white);
+  color: #FFFFFF;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -1452,10 +1447,10 @@ textarea[name="comment"]::-moz-placeholder {
 .button-close {
   width: 30px;
   height: 30px;
-  background-color: var(--text-color-white);
+  background-color: #FFFFFF;
   border-radius: 100%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  color: var(--black-color);
+  color: #000000;
   margin-top: 8px;
   margin-right: 8px;
   display: -webkit-box;
@@ -1472,9 +1467,6 @@ textarea[name="comment"]::-moz-placeholder {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
-  /* animation-name: anim;
-    animation-direction: reverse;
-    animation-duration: 250ms; */
 }
 
 @-webkit-keyframes back-anim {
@@ -1508,7 +1500,7 @@ textarea[name="comment"]::-moz-placeholder {
 
 .button-close:hover {
   border: 1px solid rgba(0, 0, 0, 0.1);
-  color: var(--accent-color);
+  color: #2196F3;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1589,7 +1581,7 @@ textarea[name="comment"]::-moz-placeholder {
 .projects li {
   height: 404px;
   width: 370px;
-  background: var(--text-color-white);
+  background: #FFFFFF;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1642,9 +1634,6 @@ textarea[name="comment"]::-moz-placeholder {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
-  /* animation-duration: transform 250ms; */
-  /* transition: transform 250ms ease; */
 }
 
 .overlay p {
