--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -108,13 +108,13 @@
     color: $text-color-white;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: $animation-timing-time;
 }
 
 .footer-social-link:hover,
 .footer-social-link:focus{
     background: $accent-color;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: $animation-timing-time;
 }
 
 .footer-social-icon{
@@ -150,7 +150,6 @@
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-sizing: border-box;
-    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); */
     background-color:rgba(0, 0, 0, 0.0);
     border-radius: 4px;
     padding-left: 16px;
