--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -10,3 +10,4 @@ $text-color-grey: #757575;
 $text-color-white: #FFFFFF;
 $icon-collor: #AFB1B8;
 $animation-timing: cubic-bezier(0.4, 0, 0.2, 1);
+$animation-timing-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
