--- a/css/main.css
+++ b/css/main.css
@@ -309,14 +309,13 @@ a {
 }
 
 .container {
-  width: 1170px;
+  width: 1200px;
   padding-top: 0px;
   padding-right: 15px;
   padding-bottom: 0px;
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
 }
 
 /*Шапка страницы*/
@@ -334,9 +333,6 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .logo {
@@ -368,7 +364,6 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-right: 305px;
 }
 
 .site-nav a {
@@ -416,54 +411,6 @@ a {
   display: flex;
   position: relative;
   top: 31.5px;
-}
-
-/*Контакты*/
-.contacts-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.contacts-nav li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.contacts-nav li:nth-child(1) {
-  padding-right: 30px;
-}
-
-.contacts-nav a {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  color: #757575;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts-nav a:hover,
-.contacts-nav a:focus {
-  color: #2196F3;
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link-icon {
-  fill: currentColor;
-  padding-right: 10px;
 }
 
 /*Особенности*/
@@ -738,7 +685,7 @@ a {
 
 /* Адрес и контакты */
 .adress-footer {
-  padding-top: 20px;
+  margin-top: 20px;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -746,6 +693,7 @@ a {
   line-height: 24px;
   letter-spacing: 0.03em;
   height: 81px;
+  width: 231px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -876,7 +824,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 20px;
+  margin-top: 20px;
 }
 
 .subscription-input {
@@ -1659,5 +1607,64 @@ textarea[name="comment"]::-moz-placeholder {
   line-height: 30px;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+/*Контакты*/
+.contacts-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 305px;
+}
+
+.contacts-nav li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contacts-nav li:nth-child(1) {
+  padding-right: 30px;
+}
+
+.contacts-nav a {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-nav a:hover,
+.contacts-nav a:focus {
+  color: #2196F3;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-icon {
+  fill: currentColor;
+  padding-right: 10px;
+}
+
+.icon-email {
+  width: 1.9em;
+  height: 1.9em;
+}
+
+.icon-smartphone {
+  width: 1.45em;
+  height: 1.45em;
 }
 /*# sourceMappingURL=main.css.map */
