--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,10 +1,10 @@
 .container{
-    width: 1170px;
+    width: 1200px;
     padding-top: 0px;
     padding-right: 15px;
     padding-bottom: 0px;
     padding-left: 15px;
     margin-left: auto;
     margin-right: auto;
-    position: relative;
+    // position: relative;
 }
