--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,3 +14,4 @@
 @import "./components/portfolio";
 @import "./components/portfolio-nav-buttons";
 @import "./components/portfolio-projects";
+@import "./components/header-contacts";
