--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,6 +1,6 @@
 .portfolio{
-    padding-top: 94px;
-    padding-bottom: 94px;
+    margin-top: 94px;
+    margin-bottom: 94px;
 }
 
 .portfolio-div{
