--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -7,21 +7,21 @@
 .clients-div{
     display: flex;
     flex-direction: column;
-}
 
-.clients-div h2{
-    text-align: center;
+    h2{
+        text-align: center;
+    }
 }
 
 .clients-list{
     padding-top: 50px;
     display: flex;
     justify-content: space-between;
-}
 
-.clients-list li{
-    display: flex;
-    justify-content: space-between;
+    li{
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .clients-link{
@@ -33,21 +33,16 @@
     justify-content: center;
     align-items: center;
     color: $icon-collor;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: $animation-timing-time;
 
-.clients-link:hover,
-.clients-link:focus{
+    &:hover,
+    &:focus{
     color: $accent-color;
     border: 1px solid $accent-color;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: $animation-timing-time;
+    }
 }
 
 .clients-icon{
     fill: currentColor;
-}
-
-.icon-clients:hover,
-.icon-clients:focus{
-    fill: $accent-color;
 }
