--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -6,30 +6,30 @@
 .features{
     display: flex;
     justify-content: space-between;
-}
 
-.features li{
-    width: 270px;
-}
+    li{
+        width: 270px;
+    }
 
-.features img{
-    padding-bottom: 30px;
-}
+    img{
+        padding-bottom: 30px;
+    }
 
-.features h3{
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $text-color-black;
-    padding-bottom: 10px;
-}
+    h3{
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: $text-color-black;
+        padding-bottom: 10px;
+    }
 
-.features p{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: $text-color-grey;
+    p{
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        letter-spacing: 0.03em;
+        color: $text-color-grey;
+    }
 }
