--- a/sass/components/_portfolio-nav-buttons.scss
+++ b/sass/components/_portfolio-nav-buttons.scss
@@ -4,32 +4,32 @@
     justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
-}
 
-.portfolio-nav button{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $text-color-black;
-    border-radius: 4px;
-    background-color: $bt-primary;
-    padding-top: 6px;
-    padding-right: 22px;
-    padding-bottom: 6px;
-    padding-left: 22px;
-    border: 0px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-}
+    button{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 26px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: $text-color-black;
+        border-radius: 4px;
+        background-color: $bt-primary;
+        padding-top: 6px;
+        padding-right: 22px;
+        padding-bottom: 6px;
+        padding-left: 22px;
+        border: 0px;
+        transition: $animation-timing-time;
+        cursor: pointer;
 
-.portfolio-nav button:hover,
-.portfolio-nav button:focus{
-    color: $text-color-white;
-    background: $accent-color;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus{
+        color: $text-color-white;
+        background: $accent-color;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        transition: $animation-timing-time;
+        }
+    }
 }
