--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -7,30 +7,30 @@
 .work-div{
     display: flex;
     flex-direction: column;
-}
 
-.work-div h2{
-    text-align: center;
-    padding-bottom: 50px;
+    h2{
+        text-align: center;
+        padding-bottom: 50px;
+    }
 }
 
 .work-ul{
     display: flex;
     justify-content: space-between;
-}
 
-.work-ul li{
-    display: flex;
+    li{
+        display: flex;
+    }
 }
 
 .work-img{
     display: flex;
     justify-content: center;
     position: relative;
-}
 
-.work-img img{
-    position: relative;
+    img{
+        position: relative;
+    }
 }
 
 .work-text{
@@ -42,17 +42,17 @@
     align-items: center;
     position: absolute;
     bottom: 0px;
-}
 
-.work-text p{
-    position: absolute;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $text-color-white;
+    p{
+        position: absolute;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: $text-color-white;
+    }
 }
