add background for the subscriptiom line

--- a/css/main.css
+++ b/css/main.css
@@ -827,6 +827,7 @@ a {
   padding-left: 16px;
   padding-right: 16px;
   color: #FFFFFF;
+  background: #2F303A;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
