--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -157,6 +157,7 @@
     padding-left: 16px;
     padding-right: 16px;
     color: $text-color-white;
+    background: $background-color;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
